updated the plugin for keycloak 7/8

--- a/hanko-plugin-keycloak-ear/pom.xml
+++ b/hanko-plugin-keycloak-ear/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>hanko-plugin-keycloak-parent</artifactId>
         <groupId>io.hanko.plugins.keycloak</groupId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2-8.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
