--- a/hanko-account/package.json
+++ b/hanko-account/package.json
@@ -8,42 +8,53 @@
     "build": "webpack --config webpack.prod.js",
     "sass": "node-sass --output dist/ src/styles",
     "build-keycloak": "webpack --config webpack.keycloak.js && npm run sass",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "trans:compile": "tsc -p .  --target ES6 --module es6 --jsx preserve --outDir extracted",
+    "trans:extract": "babel \"extracted/**/*.jsx\"",
+    "trans:manage": "node scripts/translationRunner.js",
+    "trans:merge": "babel-node scripts/mergeTranslations.js"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@types/node": "^10.12.21",
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "babel-loader": "^8.0.5",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@types/node": "^10.17.5",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.5",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "ignore-loader": "^0.1.2",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.13.0",
+    "react-intl-translations-manager": "^5.0.3",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.3.1",
-    "webpack": "^4.29.2",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-react": "^7.7.4",
+    "@types/react-intl": "^2.3.18",
+    "babel-plugin-react-intl": "^3.5.1",
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "keycloak-js": "^4.8.3",
     "moment": "^2.24.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-intl": "^2.9.0",
     "whatwg-fetch": "^3.0.0"
   }
 }
