--- a/hanko-plugin-keycloak-ejb/pom.xml
+++ b/hanko-plugin-keycloak-ejb/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>hanko-plugin-keycloak-parent</artifactId>
         <groupId>io.hanko.plugins.keycloak</groupId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2-8.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -31,27 +31,27 @@
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-core</artifactId>
-            <version>4.8.3.Final</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi</artifactId>
-            <version>4.8.3.Final</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi-private</artifactId>
-            <version>4.8.3.Final</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-services</artifactId>
-            <version>4.8.3.Final</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-model-jpa</artifactId>
-            <version>4.8.3.Final</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
