--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.hanko.plugins.keycloak</groupId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2-8.0.0-SNAPSHOT</version>
     <artifactId>hanko-plugin-keycloak-parent</artifactId>
     <packaging>pom</packaging>
 
@@ -19,7 +19,7 @@
         </licenses>
 
     <properties>
-        <version.keycloak>4.8.3.Final</version.keycloak>
+        <version.keycloak>8.0.0</version.keycloak>
     </properties>
 
     <dependencyManagement>
